--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
            <h2>Our Team</h2>
            <ul>
             <li>
-                <img src="/images/our_team/mark_guerrero.jpg" alt="Photo"
+                <img src="./images/our_team/mark_guerrero.jpg" alt="Photo"
                  width="264"
                 height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="/images/our_team/tom_ford.jpg" alt="Photo"
+                <img src="./images/our_team/tom_ford.jpg" alt="Photo"
                  width="264"
                 height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="/images/our_team/camalia_garcia.jpg" alt="Photo"
+                <img src="./images/our_team/camalia_garcia.jpg" alt="Photo"
                  width="264"
                 height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="/images/our_team/daniel_wilson.jpg" alt="Photo"
+                <img src="./images/our_team/daniel_wilson.jpg" alt="Photo"
                 width="264"
                 height="260">
                 <h3>Daniel Wilson</h3>
