--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css">
+    <link rel="stylesheet" href=".css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
   </head>
   <body>
@@ -34,31 +39,31 @@
         <ul>
           <li>
             <h3>Strategy</h3>
-            <p
-              >Our goal is to identify the business problem to walk away with
-              the perfect and creative solution.</p
-            >
+            <p></p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
           <li>
             <h3>Punctuality</h3>
-            <p
-              >Bring the key message to the brand's audience for the best price
-              within the shortest possible time.</p
-            >
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
           <li>
             <h3>Diligence</h3>
-            <p
-              >Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.</p
-            >
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
           <li>
             <h3>Technologies</h3>
-            <p
-              >Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.</p
-            >
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
@@ -70,8 +75,7 @@
               src="./images/our_team/mark_guerrero.jpg"
               alt="Photo"
               width="264"
-              height="260"
-            />
+              height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -80,8 +84,7 @@
               src="./images/our_team/tom_ford.jpg"
               alt="Photo"
               width="264"
-              height="260"
-            />
+              height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -90,8 +93,7 @@
               src="./images/our_team/camalia_garcia.jpg"
               alt="Photo"
               width="264"
-              height="260"
-            />
+              height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -100,20 +102,72 @@
               src="./images/our_team/daniel_wilson.jpg"
               alt="Photo"
               width="264"
-              height="260"
-            />
+              height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/our_portfolio/banking.jpg" 
+            alt="image" 
+            width="360"
+            height="420"/>
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/cashless.jpg" 
+            alt="image" 
+            width="360"
+            height="420" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/meditation.jpg" 
+            alt="image" 
+            width="360"
+            height="420" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/taxi.jpg"
+            alt="image" 
+            width="360"
+            height="420" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/screen.jpg" 
+            alt="image" 
+            width="360"
+            height="420" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/our_portfolio/online.jpg"
+            alt="image" 
+            width="360"
+            height="420" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
-      <p
-        >Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.</p
-      >
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
